# algo-trading

./: README.md  pyproject.toml  sandbox.ipynb
weather-model/: exploratory-analysis.ipynb  plot.py
