[project]
name = "algo-trading"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.11.18",
    "backtrader>=1.9.78.123",
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.3",
    "netcdf4>=1.7.2",
    "numpy>=2.2.5",
    "pandas>=2.2.3",
    "scikit-learn>=1.6.1",
    "scipy>=1.15.3",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.4",
    "torch>=2.7.0",
    "torchaudio>=2.7.0",
    "torchvision>=0.22.0",
    "uv>=0.7.3",
    "vectorbt>=0.27.3",
    "xarray>=2025.4.0",
    "yfinance>=0.2.59",
    "zarr>=3.0.7",
]
